Fix bug for input and textarea on iOS

--- a/scss/commons/_control.scss
+++ b/scss/commons/_control.scss
@@ -22,6 +22,10 @@
   color: #ccc4c4;
 }
 
+input {
+  font-size: 16px;
+}
+
 .btn-phs-small {
   color: white;
   background: $phsColor;
