--- a/scss/commons/_specialdevice.scss
+++ b/scss/commons/_specialdevice.scss
@@ -8,3 +8,13 @@
 	  margin-top: -15px;
 	}
 }
+
+.platform-ios {
+	input {
+		padding-top: 8px;
+		line-height: 20px;
+	}
+	textarea {
+		text-indent: -3px;
+	}
+}
